--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -165,3 +165,10 @@ main {
     line-height: 30px;
     margin-top: 1px;
 }
+
+#sd{
+    padding: 0px 200px;
+}
+.skill-container{
+    display: flex;
+}
