--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -166,9 +166,38 @@ main {
     margin-top: 1px;
 }
 
-#sd{
-    padding: 0px 200px;
+#sd {
+    padding: 0 200px;
 }
-.skill-container{
+
+.skill-container {
     display: flex;
+    /* padding: 0px 30px; */
+    gap: 24px;
+
+}
+
+.skill-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.skill {
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+
+}
+
+.resume-column-title {
+    color: #474747;
+    font-family: "Open Sans";
+    font-size: 30px;
+    font-weight: 700;
+}
+.resume-column{
+    display: block;
 }
